--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
 <body>
 <h1 style="style-color: red;"> Toys Store </h1>
+  <button> like </button>
+  <button> dislike </button>
 </body>
 </html>
