--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html>
+<head>
+  h1 {
+  style-color: Red
+  background-color: black
+  text-agiln:center
+   }
+</head>
 <body>
 <h1 style="style-color: red;"> Toys Store </h1>
   <button> like </button>
-  <button> dislike </button>
+  <button> dislike </button><br>
+ 
 </body>
 </html>
