--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  body {
-  style-color: Red
-  background-color: black
-  text-agiln:center
-   }
+  <style> style="style-color: red;" </style>
+  
 </head>
 <body>
 <h1 style="style-color: red;"> Toys Store </h1>
