--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <style> style="style-color: red;" </style>
+  <style>
+    body {
+     background-color: black;
+    }
+    h1 {
+      color: red;
+      text-align: center;
+  </style>
   
 </head>
 <body>
